--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -36,10 +36,10 @@
       </ul>
     </nav>
     <div class="info">
-      <div class="account" *ngIf="user; else noProfile">{{user.email}}</div>
-      <ng-template #noProfile>
-          <button (click)="login()" >Login</button>
-      </ng-template>
+      <div class="account">
+        <button *ngIf="!profile; else elseBlock" (click)="login()">Login</button>
+        <ng-template #elseBlock>{{ profile?.email }}</ng-template>
+      </div>
       <div class="cart">
         <a href="">
           <img src="./assets/svg/icon_shopping_cart.svg" alt="logo">
