--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -1,9 +1,6 @@
 <app-img *ngIf="product.images.length > 0" [img]="product.images[0]"></app-img>
-<h2>{{ product.price | currency:'COP' }}</h2>
+<h2 class="title">{{ product.price | currency }}</h2>
 <p>{{ product.title }}</p>
-<p>{{ product?.taxes | currency:'COP' }}</p>
-<div class="d-flex">
-  <button (click)="onShowDetail()" class="btn btn-info m-1">Ver detalle</button>
-  <button (click)="onAddToCart()" class="btn btn-info m-1">Add cart</button>
-</div>
-
+<p class="category">{{ product.category?.name }}</p>
+<button (click)="onShowDetail()">Ver detalle</button>
+<button (click)="onAddToCart()">Add cart</button>
