--- a/src/app/website/pages/profile/profile.component.html
+++ b/src/app/website/pages/profile/profile.component.html
@@ -1,1 +1,6 @@
-<p>profile works!</p>
+<div *ngIf="profile">
+  <h1>My profile</h1>
+  <p>Nombre {{profile.name}}</p>
+  <p>email {{profile.email}}</p>
+  <p>rol {{profile.role}}</p>
+</div>
