Guard para Admin

--- a/src/app/website/pages/profile/profile.component.html
+++ b/src/app/website/pages/profile/profile.component.html
@@ -3,4 +3,5 @@
   <p>Nombre {{profile.name}}</p>
   <p>email {{profile.email}}</p>
   <p>rol {{profile.role}}</p>
+  <a routerLink="/cms" *ngIf="profile.role === 'admin'"> Ir al CMS</a>
 </div>
