--- a/src/app/admin/components/basic-form/basic-form.component.html
+++ b/src/app/admin/components/basic-form/basic-form.component.html
@@ -43,4 +43,27 @@
     <input type="number" [formControl]="numberField" />
   </div>
 
+  <div>
+    <p>
+      Category: {{categoryField.value}}
+    </p>
+    <select [formControl]="categoryField">
+      <option value="" disabled>Seleccione una opción</option>
+      <option value="category-1">Category 1</option>
+      <option value="category-2">Category 2</option>
+      <option value="category-3">Category 3</option>
+    </select>
+  </div>
+
+  <div>
+    <p>
+      Tag: {{tagField.value}}
+    </p>
+    <select [formControl]="tagField" multiple>
+      <option value="Tag-1">Tag 1</option>
+      <option value="Tag-2">Tag 2</option>
+      <option value="Tag-3">Tag 3</option>
+    </select>
+  </div>
+
 </div>
