--- a/src/app/admin/components/basic-form/basic-form.component.scss
+++ b/src/app/admin/components/basic-form/basic-form.component.scss
@@ -5,12 +5,21 @@ input {
 
   &.is-invalid {
     border: 2px solid red;
+    background-color: rgba(255, 0, 0, 0.11);
   }
 }
 
 .messages {
   opacity: 0;
   transition: all .3s ease-in;
+  margin: 0;
+
+  p {
+    margin: 0;
+    padding: 0;
+    font-size: small;
+    color: red;
+  }
 
   &.active {
     opacity: 1;
