--- a/src/app/auth/components/register/register.component.html
+++ b/src/app/auth/components/register/register.component.html
@@ -17,6 +17,15 @@
           <mat-form-field>
             <mat-label>Password</mat-label>
             <input placeholder="password" formControlName="password" matInput type="password">
+            <mat-error *ngIf="passwordField.hasError('required')">
+              Este campo es obligatorio.
+            </mat-error>
+            <mat-error *ngIf="passwordField.hasError('invalid_password')">
+              Debe tener al menos un carácter alfanumérico.
+            </mat-error>
+            <mat-error *ngIf="passwordField.hasError('minlength')">
+              Debe tener al menos 6 caracteres.
+            </mat-error>
           </mat-form-field>
         </div>
       </div>
