formulario para crear categorías de productos

--- a/src/app/admin/categories/components/category-form/category-form.component.html
+++ b/src/app/admin/categories/components/category-form/category-form.component.html
@@ -1,1 +1,34 @@
-<p>category-form works!</p>
+<form [formGroup]="form">
+  <mat-card>
+    <mat-card-header>
+      <mat-card-title>
+        Category
+      </mat-card-title>
+    </mat-card-header>
+
+    <mat-card-content>
+      <div class="row">
+        <div class="col-xs">
+          <mat-form-field appearance="fill">
+            <mat-label>Name</mat-label>
+            <input matInput type="text" formControlName="name">
+          </mat-form-field>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-xs">
+          <mat-form-field appearance="fill">
+            <mat-label>Image</mat-label>
+            <input matInput type="text" formControlName="image">
+          </mat-form-field>
+        </div>
+      </div>
+    </mat-card-content>
+
+    <mat-card-actions>
+      <button mat-raised-button type="submit">Save category</button>
+    </mat-card-actions>
+
+  </mat-card>
+</form>
