--- a/src/app/admin/categories/components/category-form/category-form.component.html
+++ b/src/app/admin/categories/components/category-form/category-form.component.html
@@ -12,6 +12,11 @@
           <mat-form-field appearance="fill">
             <mat-label>Name</mat-label>
             <input matInput type="text" formControlName="name">
+            <mat-error>
+              <span *ngIf="nameField.hasError('Required')">Este campo es obligatorio.</span>
+              <span *ngIf="nameField.hasError('minlength')">Debe tener por lo menos 4 caracteres</span>
+              <span *ngIf="nameField.hasError('not_available')">El nombre ya existe.</span>
+            </mat-error>
           </mat-form-field>
         </div>
       </div>
