--- a/src/app/admin/categories/components/category-form/category-form.component.html
+++ b/src/app/admin/categories/components/category-form/category-form.component.html
@@ -32,7 +32,7 @@
     </mat-card-content>
 
     <mat-card-actions>
-      <button mat-raised-button type="submit">Save category</button>
+      <button mat-raised-button type="submit">{{categoryId ? 'Editar' : 'Crear'}} categoría</button>
     </mat-card-actions>
 
   </mat-card>
