smart y dumb components, Input como setter

--- a/src/app/admin/categories/components/category-form/category-form.component.html
+++ b/src/app/admin/categories/components/category-form/category-form.component.html
@@ -32,7 +32,7 @@
     </mat-card-content>
 
     <mat-card-actions>
-      <button mat-raised-button type="submit">{{category ? 'Editar' : 'Crear'}} categoría</button>
+      <button mat-raised-button type="submit">{{isNew ? 'Crear' : 'Editar'}} categoría</button>
     </mat-card-actions>
 
   </mat-card>
