--- a/src/app/admin/products/components/product-create/product-create.component.html
+++ b/src/app/admin/products/components/product-create/product-create.component.html
@@ -7,14 +7,18 @@
       <div class="row">
         <div class="col-xs">
           <mat-form-field>
-            <input placeholder="Id" formControlName="id" matInput type="text">
+            <input placeholder="Title" formControlName="title" matInput type="text">
+            <mat-error>
+              <span *ngIf="titleField.hasError('required')">Este campo es obligatorio.</span>
+              <span *ngIf="titleField.hasError('minlength')">Debe tener por lo menos 4 caracteres</span>
+            </mat-error>
           </mat-form-field>
         </div>
       </div>
       <div class="row">
         <div class="col-xs">
           <mat-form-field>
-            <input placeholder="Title" formControlName="title" matInput type="text">
+            <input placeholder="CategoryId" formControlName="category_id" matInput type="text">
           </mat-form-field>
         </div>
       </div>
@@ -22,17 +26,20 @@
         <div class="col-xs">
           <mat-form-field>
             <input placeholder="Price" formControlName="price" matInput type="number">
+            <mat-error>
+              <span *ngIf="priceField.hasError('required')">Este campo es obligatorio.</span>
+            </mat-error>
           </mat-form-field>
-          <div *ngIf="priceField.errors && priceField.dirty">
-            <p *ngIf="priceField.hasError('price_invalid')">no te debes pasar de 10000</p>
-            <p *ngIf="priceField.hasError('required')">el campo es requerido</p>
-          </div>
         </div>
       </div>
       <div class="row">
         <div class="col-xs">
           <mat-form-field>
             <textarea placeholder="Text" formControlName="description" matInput></textarea>
+            <mat-error>
+              <span *ngIf="descriptionField.hasError('required')">Este campo es obligatorio.</span>
+              <span *ngIf="descriptionField.hasError('minlength')">Debe tener por lo menos 10 caracteres</span>
+            </mat-error>
           </mat-form-field>
         </div>
       </div>
@@ -40,6 +47,9 @@
         <div class="col-xs">
           <img *ngIf="(image$ | async) as image" [src]="image" alt="">
           <input type="file" (change)="uploadFile($event)">
+          <mat-error style="font-size: small;">
+            <span *ngIf="imageField.touched && imageField.hasError('required')">Este campo es obligatorio.</span>
+          </mat-error>
         </div>
       </div>
     </mat-card-content>
@@ -47,5 +57,5 @@
       <button [disabled]="form.invalid" mat-raised-button type="submit">Guardar</button>
     </mat-card-actions>
   </mat-card>
-  
+
 </form>
