--- a/src/app/admin/products/components/product-create/product-create.component.html
+++ b/src/app/admin/products/components/product-create/product-create.component.html
@@ -18,7 +18,10 @@
       <div class="row">
         <div class="col-xs">
           <mat-form-field>
-            <input placeholder="CategoryId" formControlName="category_id" matInput type="text">
+            <mat-label>Categories</mat-label>
+            <mat-select formControlName="category_id">
+              <mat-option *ngFor="let item of categories" [value]="item.id">{{item.name}}</mat-option>
+            </mat-select>
           </mat-form-field>
         </div>
       </div>
