Select dinámico con objetos

--- a/src/app/admin/products/components/product-create/product-create.component.html
+++ b/src/app/admin/products/components/product-create/product-create.component.html
@@ -28,6 +28,16 @@
       <div class="row">
         <div class="col-xs">
           <mat-form-field>
+            <mat-label>States</mat-label>
+            <mat-select formControlName="state">
+              <mat-option *ngFor="let item of states" [value]="item">{{item.name}}</mat-option>
+            </mat-select>
+          </mat-form-field>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs">
+          <mat-form-field>
             <input placeholder="Price" formControlName="price" matInput type="number">
             <mat-error>
               <span *ngIf="priceField.hasError('required')">Este campo es obligatorio.</span>
@@ -57,7 +67,7 @@
       </div>
     </mat-card-content>
     <mat-card-actions>
-      <button [disabled]="form.invalid" mat-raised-button type="submit">Guardar</button>
+      <button mat-raised-button type="submit">Guardar</button>
     </mat-card-actions>
   </mat-card>
 
