--- a/src/app/admin/products/components/product-create/product-create.component.html
+++ b/src/app/admin/products/components/product-create/product-create.component.html
@@ -27,6 +27,12 @@
       </div>
       <div class="row">
         <div class="col-xs">
+          <!-- implementamos CVA -->
+          <app-stepper formControlName="stock"></app-stepper>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs">
           <mat-form-field>
             <mat-label>States</mat-label>
             <mat-select formControlName="state">
