--- a/src/app/order/components/order/order.component.html
+++ b/src/app/order/components/order/order.component.html
@@ -2,34 +2,72 @@
   <mat-step>
     <ng-template matStepLabel>Sus productos</ng-template>
     <div *ngIf="(products$ | async) as products">
-        <p *ngIf="products.length === 0">no hay productos</p>
-        <div class="row" *ngFor="let product of products">
-          <div class="col-xs-12 col-sm-2 col-md-2">
-            <div class="box">
-              <img class="image" [src]="product.image" alt="">
-            </div>
-          </div>
-          <div class="col-xs-12 col-sm-5 col-md-5">
-            <div class="box">
-              {{ product.title }}
-            </div>
-          </div>
-          <div class="col-xs-12 col-sm-5 col-md-5">
-            <div class="box">
-              {{ product.price }}
-            </div>
+      <p *ngIf="products.length === 0">no hay productos</p>
+      <div class="row" *ngFor="let product of products">
+        <div class="col-xs-12 col-sm-2 col-md-2">
+          <div class="box">
+            <img class="image" [src]="product.image" alt="">
           </div>
         </div>
+        <div class="col-xs-12 col-sm-5 col-md-5">
+          <div class="box">
+            {{ product.title }}
+          </div>
+        </div>
+        <div class="col-xs-12 col-sm-5 col-md-5">
+          <div class="box">
+            {{ product.price }}
+          </div>
+        </div>
+      </div>
     </div>
-    
+
   </mat-step>
   <mat-step>
     <ng-template matStepLabel>Datos personales</ng-template>
-    <h1>contenifo</h1>
+
+    <form style="margin: 1rem;" [formGroup]="form" (ngSubmit)="save()">
+      <mat-card>
+        <mat-card-content>
+
+          <div class="row">
+            <div class="col-xs">
+              <mat-form-field>
+                <input placeholder="Nombre" formControlName="name" matInput type="text">
+                <mat-error>
+                  <span *ngIf="nameField.hasError('required')">Este campo es obligatorio.</span>
+                </mat-error>
+              </mat-form-field>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col-xs">
+              <button mat-raised-button type="button" (click)="addAddressField()" color="primary">Add address</button>
+              <div formArrayName="address" *ngFor="let address of addressField.controls; let i = index">
+                <div [formGroupName]="i">
+                  <mat-form-field>
+                    <input placeholder="Zip Code" formControlName="zip" matInput type="text">
+                  </mat-form-field>
+                  <mat-form-field>
+                    <input placeholder="Text" formControlName="text" matInput type="text">
+                  </mat-form-field>
+                </div>
+              </div>
+            </div>
+          </div>
+
+        </mat-card-content>
+        <mat-card-actions>
+          <button mat-raised-button type="submit" color="primary">next</button>
+        </mat-card-actions>
+
+      </mat-card>
+    </form>
+
   </mat-step>
   <mat-step>
     <ng-template matStepLabel>Pago</ng-template>
     <h1>contenifo</h1>
   </mat-step>
 </mat-horizontal-stepper>
-
